vlib/v/checker/tests/generics_interface_decl_no_mention_err.vv
fn main() {}

interface Foo<U> {
	Bar<T>
	foo(u U, p P)
	bar(u U) []P
}

interface Bar<T> {
}
